# macos-requirements

./: .flake8  LICENSE  MacOShardware.csv  README.md  macOShardware.csv  plot_macos_hardware.py  pyproject.toml
