[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macos_requirements"
requires-python = ">=3.7"
dependencies = ["matplotlib", "pandas"]

[tool.black]
line-length = 99

[tool.mypy]
files = ["."]

ignore_missing_imports = true
strict_optional = false
show_column_numbers = true
